--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "vite": "^4.3.1"
   },
   "scripts": {
