--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "semver": "^6.3.0",
     "source-map-js": "^1.0.2",
     "supports-color": "^5.5.0",
+    "react-router-dom": "^6.8.1",
     "to-fast-properties": "^2.0.0",
     "update-browserslist-db": "^1.0.11",
     "yallist": "^3.1.1"
@@ -48,6 +49,9 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.6",
+    "react-tilt": "^0.1.4",
+    "react-vertical-timeline-component": "^3.6.0",
+    "three": "^0.149.0",
     "vite": "^4.3.1"
   },
   "scripts": {
