--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "picocolors": "^1.0.0",
     "postcss": "^8.4.23",
     "react-refresh": "^0.14.0",
+    "framer-motion": "^9.0.7",
     "rollup": "^3.21.0",
     "scheduler": "^0.23.0",
     "semver": "^6.3.0",
