--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "scheduler": "^0.23.0",
     "semver": "^6.3.0",
     "source-map-js": "^1.0.2",
+    "react-tilt": "^0.1.4",
     "supports-color": "^5.5.0",
     "react-router-dom": "^6.8.1",
     "to-fast-properties": "^2.0.0",
