--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-tilt": "^0.1.4",
     "supports-color": "^5.5.0",
     "react-router-dom": "^6.8.1",
+    "react-tilt": "^0.1.4",
     "to-fast-properties": "^2.0.0",
     "update-browserslist-db": "^1.0.11",
     "yallist": "^3.1.1"
