--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
     "scheduler": "^0.23.0",
     "semver": "^6.3.0",
     "source-map-js": "^1.0.2",
-    "react-tilt": "^0.1.4",
     "supports-color": "^5.5.0",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^18.2.0",
+    "react": "^18.2.0",
     "react-tilt": "^0.1.4",
     "to-fast-properties": "^2.0.0",
     "update-browserslist-db": "^1.0.11",
     "yallist": "^3.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
